@@ -3,6 +3,8 @@ Changes in version 0.1.2.7-alpha - 2007-??-??
     - When computing clock skew from directory HTTP headers, consider what
       time it was when we finished asking for the directory, not what time it
       is now.
+    - Add some defensive programming to eventdns.c in an attempt to catch
+      possible memory-stomping bugs.
 
 
 Changes in version 0.1.2.6-alpha - 2007-01-09
